<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.eclipse.ee4j</groupId>
    <artifactId>project</artifactId>
    <version>1.0.7</version>
    <relativePath></relativePath>
  </parent>
  <groupId>jakarta.annotation</groupId>
  <artifactId>jakarta.annotation-api</artifactId>
  <version>2.1.1</version>
  <name>Jakarta Annotations API</name>
  <description>Jakarta Annotations API</description>
  <url>https://projects.eclipse.org/projects/ee4j.ca</url>
  <inceptionYear>2004</inceptionYear>
  <licenses>
    <license>
      <name>EPL 2.0</name>
      <url>http://www.eclipse.org/legal/epl-2.0</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>GPL2 w/ CPE</name>
      <url>https://www.gnu.org/software/classpath/license.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Linda De Michiel</name>
      <organization>Oracle Corp.</organization>
    </developer>
    <developer>
      <name>Dmitry Kornilov</name>
      <organization>Oracle Corp.</organization>
    </developer>
  </developers>
  <mailingLists>
    <mailingList>
      <name>Jakarta Annotations mailing list</name>
      <subscribe>https://dev.eclipse.org/mailman/listinfo/ca-dev</subscribe>
      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/ca-dev</unsubscribe>
      <post>ca-dev@eclipse.org</post>
      <archive>https://dev.eclipse.org/mhonarc/lists/ca-dev</archive>
    </mailingList>
  </mailingLists>
  <scm>
    <connection>scm:git:https://github.com/eclipse-ee4j/common-annotations-api.git</connection>
    <developerConnection>scm:git:git@github.com:eclipse-ee4j/common-annotations-api.git</developerConnection>
    <url>https://github.com/eclipse-ee4j/common-annotations-api</url>
  </scm>
  <issueManagement>
    <system>github</system>
    <url>https://github.com/eclipse-ee4j/common-annotations-api/issues</url>
  </issueManagement>
  <properties>
    <spotbugs.version>4.0.4</spotbugs.version>
    <non.final>false</non.final>
    <spotbugs.skip>false</spotbugs.skip>
    <spec.version>2.1</spec.version>
    <implementation.vendor.id>org.glassfish</implementation.vendor.id>
    <spotbugs.threshold>Low</spotbugs.threshold>
    <copyright.ignoreyear>false</copyright.ignoreyear>
    <vendor.name>Eclipse Foundation</vendor.name>
    <copyright.scmonly>true</copyright.scmonly>
    <copyright.update>false</copyright.update>
    <extension.name>jakarta.annotation</extension.name>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.glassfish.build</groupId>
          <artifactId>spec-version-maven-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>5.1.1</version>
          <configuration>
            <instructions>
              <_noextraheaders>true</_noextraheaders>
            </instructions>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>${spotbugs.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M3</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[11,)</version>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>[3.6.0,)</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-resource</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>add-resource</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>${basedir}/..</directory>
                  <targetPath>META-INF</targetPath>
                  <includes>
                    <include>LICENSE.md</include>
                    <include>NOTICE.md</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <executions>
          <execution>
            <id>base-compile</id>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <release>8</release>
              <excludes>
                <exclude>module-info.java</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <release>9</release>
          <compilerArgs>
            <arg>-Xlint:all</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.glassfish.build</groupId>
        <artifactId>spec-version-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>set-spec-properties</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <specMode>jakarta</specMode>
          <spec>
            <nonFinal>${non.final}</nonFinal>
            <jarType>api</jarType>
            <specBuild>${spec.build}</specBuild>
            <specVersion>${spec.version}</specVersion>
            <newSpecVersion>${new.spec.version}</newSpecVersion>
            <specImplVersion>${project.version}</specImplVersion>
            <apiPackage>${extension.name}</apiPackage>
          </spec>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <executions>
          <execution>
            <id>bundle-manifest</id>
            <phase>process-classes</phase>
            <goals>
              <goal>manifest</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <instructions>
            <Bundle-Version>${spec.bundle.version}</Bundle-Version>
            <Bundle-SymbolicName>${spec.bundle.symbolic-name}</Bundle-SymbolicName>
            <Extension-Name>${spec.extension.name}</Extension-Name>
            <Implementation-Version>${spec.implementation.version}</Implementation-Version>
            <Specification-Version>${spec.specification.version}</Specification-Version>
            <Bundle-Description>${project.name}</Bundle-Description>
            <Specification-Vendor>${vendor.name}</Specification-Vendor>
            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
            <Implementation-Vendor-Id>${implementation.vendor.id}</Implementation-Vendor-Id>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-Build-Id>${buildNumber}</Implementation-Build-Id>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
            </manifest>
          </archive>
          <release>11</release>
          <additionalOptions>--add-modules java.sql</additionalOptions>
          <notimestamp>true</notimestamp>
          <nosince>true</nosince>
          <docfilessubdirs>true</docfilessubdirs>
          <doctitle>Jakarta Annotations ${project.version} API Specification</doctitle>
          <header>&lt;br>Jakarta Annotations API v${project.version}</header>
          <bottom>Copyright &amp;#169; 2019, 2021 Eclipse Foundation. All rights reserved.&lt;br>
                    Use is subject to &lt;a href="{@docRoot}/doc-files/EFSL.html" target="_top">license terms&lt;/a>.</bottom>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <configuration>
          <skip>${spotbugs.skip}</skip>
          <threshold>${spotbugs.threshold}</threshold>
          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
          <fork>true</fork>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
